--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -4,6 +4,7 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#000000"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -12,38 +13,13 @@
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/v_show"
-        android:layout_width="300dp"
-        android:layout_height="300dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         android:layout_centerHorizontal="true" />
 
-    <LinearLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_input"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:gravity="center_horizontal"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/btn_svga"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="SVGA"
-            android:textAllCaps="false" />
-
-        <Button
-            android:id="@+id/btn_rf"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="6dp"
-            android:text="RF"
-            android:textAllCaps="false" />
-
-        <Button
-            android:id="@+id/btn_rf_preview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="6dp"
-            android:text="RF Preview"
-            android:textAllCaps="false" />
-    </LinearLayout>
+        android:layout_height="200dp"
+        android:layout_alignParentBottom="true" />
 </RelativeLayout>
